[metadata]
name=prometheus_redis_client
version=0.1.1
author=starenka
author_email=starenka0@gmail.com

[options]
packages=find:
zip_safe=False
include_package_data=True
install_requires=
    redis
[options.extras_require]
dev=
    pytest
    ipdb
    pre-commit
[options.entry_points]
console_scripts =
    prometheus_metrics_http = prometheus_redis_client.http_server:main