[metadata]
name=prometheus_redis_client
version=0.1.3.dev0
author=starenka
author_email=starenka0@gmail.com

[options]
packages=find:
zip_safe=False
include_package_data=True
install_requires=
    redis
[options.extras_require]
dev=
    pytest
    pytest-cov
    testcontainers[redis]
    prometheus-client
    ipdb
    pre-commit
test=
    pytest
    pytest-cov
    testcontainers[redis]
    prometheus-client
[options.entry_points]
console_scripts =
    prometheus_metrics_http = prometheus_redis_client.http_server:main
